# Project2Group3

./: README.md
FindJoe/: CMakeLists.txt  ConstructorErrException.h  client.cpp  client.h  main.cpp
pi/: CMakeLists.txt  I2Cdev.cpp  main.cpp  main.cpp~  rs232.c  serial.cpp  serial.cpp~  serial.h  serial.h~  server.cpp  server.h
stepdriver/: stepdriver.ino
